--- a/public/index.html
+++ b/public/index.html
@@ -49,19 +49,19 @@
     setValueHexColor('#000000');
   });
 
-  socket.on('brush', () => {
+  socket.on('brush', (data) => {
     document.getElementById("outputTextBrush").value = data.value;
   });
 
-  socket.on('brightness', () => {
+  socket.on('brightness', (data) => {
     document.getElementById("outputTextBrightness").value = data.value;
   });
 
-  socket.on('pressure', () => {
+  socket.on('pressure', (data) => {
     document.getElementById("outputTextPressure").value = data.value;
   });
 
-  socket.on('hexcolor', () => {
+  socket.on('hexcolor', (data) => {
     var colorRGB = hexToRgb(data.value);
     document.getElementById("inputSliderRed").value = colorRGB.r;
     document.getElementById("outputTextRed").innerHTML = colorRGB.r;
