--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
     var colorhex = rgbToHex(document.getElementById("inputSliderRed").value,
     document.getElementById("inputSliderGreen").value,
     document.getElementById("inputSliderBlue").value);
-    setHexColorValue(colorhex);
+    setValueHexColor(colorhex);
   }
 
   function setValuePressure(newValue)
