--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
   <br><div id="html5DIV">
     <h3>LED Color Picker</h3>
-    <input type="color" id="html5colorpicker" onclick="setColor()" value="#000000" style="width:85%;">
+    <input type="color" id="html5colorpicker" oninput="setColor()" value="#000000" style="width:85%;">
   </div>
 
 
