update color picker

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
     document.getElementById("outputTextGreen").innerHTML = colorRGB.g;
     document.getElementById("inputSliderBlue").value = colorRGB.b;
     document.getElementById("outputTextBlue").innerHTML = colorRGB.b;
+    document.getElementById("html5colorpicker").value = data.value;
   });
 
   function setColor()
