bugfix error handling

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
   }
 
   function generateError(){
-    socket.emit('error');
+    socket.emit('errorhandling');
   }
 
   function setValuePressure(newValue)
