--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
   {
     document.getElementById("outputTextPressure").innerHTML=newValue;
     
-    for(i==1;i<=100;i++){
+    for(var i=1;i<=100;i++){
       socket.volatile.emit('pressure', { value: document.getElementById("outputTextPressure").innerHTML + parseInt(i/2) });
     }
     // rtime = new Date();
