--- a/public/index.html
+++ b/public/index.html
@@ -117,11 +117,11 @@
     
     for(var i=1;i<=40;i++){
       var tempval1 = parseInt(document.getElementById("outputTextPressure").innerHTML - 20 + (i/2)) 
-      socket.volatile.emit('pressure', { value: tempval1 });
+      socket.emit('pressure', { value: tempval1 });
     }
     for(var i=1;i<=40;i++){
       var tempval2 = parseInt(document.getElementById("outputTextPressure").innerHTML + 20 - (i/2))
-      socket.volatile.emit('pressure', { value: tempval2 });
+      socket.emit('pressure', { value: tempval2 });
     }    
     // rtime = new Date();
     // if (timeout === false) {
