--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,13 @@
   <br>
   <input type="range" id= "inputSliderBrush" min="1" max="3" value="1" step="1" oninput="setValueBrush(this.value)" />
   <br><h3>Brush: </h3><span id="outputTextBrush">1</span><br><br>
-
-  <input type="range" id= "inputSliderThumbSlider" min="0" max="255" value="0" step="1" oninput="setValueThumbSlider(this.value)" />
-  <br><h3>ThumbSlider: </h3><span id="outputTextThumbSlider">0</span><br>
-  <br>
+  
+  <input type="range" id= "inputSliderMaxBrushSize" min="0" max="1" value="1" step="0.1" oninput="setValueMaxBrushSize(this.value)" />
+  <br><h3>Brush: </h3><span id="outputTextMaxBrushSize">1</span><br><br>
+  
+  <input type="range" id= "inputSliderThumbSlider" min="0" max="100" value="0" step="1" oninput="setValueThumbSlider(this.value)" />
+  <br><h3>ThumbSlider: </h3><span id="outputTextThumbSlider">0</span><br><br>
+  
   <input type="range" id= "inputSliderPressure" min="0" max="100" value="0" step="1" oninput="setValuePressure(this.value)" />
   <br><h3>Pressure: </h3><span id="outputTextPressure">0</span><br><br>
 
@@ -56,6 +59,11 @@
     document.getElementById("inputSliderThumbSlider").value = data.value;
     document.getElementById("outputTextThumbSlider").innerHTML = data.value;
   });
+    
+  socket.on('maxbrushsize', (data) => {
+    document.getElementById("inputSliderMaxBrushSize").value = data.value;
+    document.getElementById("outputTextMaxBrushSize").innerHTML = data.value;
+  });    
 
   socket.on('pressure', (data) => {
     document.getElementById("inputSliderPressure").value = data.value;
