--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <br>
   <input type="range" id= "inputSliderBrush" min="1" max="7" value="1" step="1" oninput="setValueBrush(this.value)" />
   <br><h3>Brush: </h3><span id="outputTextBrush">1</span><br><br>
+  
+  <input type="range" id= "inputStampBrush" min="0" max="1" value="0" step="1" oninput="setValueStampBrush(this.value)" />
+  <br><h3>Stamp Brush: </h3><span id="outputTextStampBrush">0</span><br><br>  
 
   <input type="range" id= "inputSliderMaxBrushSize" min="0" max="1" value="0" step="0.01" oninput="setValueMaxBrushSize(this.value)" />
   <br><h3>MaxBrushSize: </h3><span id="outputTextMaxBrushSize">0</span><br><br>
@@ -62,6 +65,17 @@
     document.getElementById("inputSliderBrightness").value = data.value;
     document.getElementById("outputTextBrightness").innerHTML = data.value;
   });
+
+  socket.on('hexcolor', (data) => {
+    var colorRGB = hexToRgb(data.value);
+    document.getElementById("inputSliderRed").value = colorRGB.r;
+    document.getElementById("outputTextRed").innerHTML = colorRGB.r;
+    document.getElementById("inputSliderGreen").value = colorRGB.g;
+    document.getElementById("outputTextGreen").innerHTML = colorRGB.g;
+    document.getElementById("inputSliderBlue").value = colorRGB.b;
+    document.getElementById("outputTextBlue").innerHTML = colorRGB.b;
+    document.getElementById("html5colorpicker").value = data.value;
+  });
     
   socket.on('maxbrightness', (data) => {
     document.getElementById("inputSliderMaxBrightness").value = data.value;
@@ -78,17 +92,11 @@
     document.getElementById("outputTextPressure").innerHTML = data.value;
   });
 
-  socket.on('hexcolor', (data) => {
-    var colorRGB = hexToRgb(data.value);
-    document.getElementById("inputSliderRed").value = colorRGB.r;
-    document.getElementById("outputTextRed").innerHTML = colorRGB.r;
-    document.getElementById("inputSliderGreen").value = colorRGB.g;
-    document.getElementById("outputTextGreen").innerHTML = colorRGB.g;
-    document.getElementById("inputSliderBlue").value = colorRGB.b;
-    document.getElementById("outputTextBlue").innerHTML = colorRGB.b;
-    document.getElementById("html5colorpicker").value = data.value;
+  socket.on('stampbrush', (data) => {
+    document.getElementById("inputSliderStampBrush").value = data.value;
+    document.getElementById("outputTextStampBrush").innerHTML = data.value;
   });
-
+    
   function setColor()
   {
     var newValue = document.getElementById("html5colorpicker").value;
@@ -99,6 +107,15 @@
     document.getElementById("outputTextBrush").innerHTML = newValue;
     socket.emit('brush', { value: newValue });
   }
+  function setValueStampBrush(newValue)
+  {
+    var stampbrush = 'false';
+    document.getElementById("outputTextStampBrush").innerHTML = newValue;
+    if (newValue == 1){
+      stampbrush = 'true';
+    }
+    socket.emit('stampbrush', { value: stampbrush });
+  }    
   function setValueMaxBrushSize(newValue)
   {
     document.getElementById("outputTextMaxBrushSize").innerHTML = newValue;
