--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
   <br><button type="button" onclick="generateError()">Generate Error</button>
   <br><button type="button" onclick="toggleStampBrush()">Toggle Stamp Brush</button>
-  <h3>Status </h3><span id="outputTextStampBrush">0</span>
+  <h3>Stamp Brush Status: </h3><span id="outputTextStampBrush">false</span>
 
   <script type="text/javascript">
   var socket = io.connect();
